--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "simian-react-button",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A button component that helps you standardise your buttons. Supply your own css or use the one provided.",
-  "main": "lib/simian-react-button.js",
+  "files": [
+    "lib"
+  ],
+  "main": "lib/Button.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +23,10 @@
     "url": "https://github.com/akshat1/simian-react-button/issues"
   },
   "homepage": "https://github.com/akshat1/simian-react-button#readme",
+  "dependencies": {
+    "lodash": "^4.13.1",
+    "react": "^15.1.0"
+  },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.9.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -28,7 +35,11 @@
     "babel-preset-stage-0": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "lodash": "^4.13.1",
-    "react": "^15.1.0"
+    "gulp-postcss": "^6.1.1",
+    "postcss-functions": "^2.1.0",
+    "postcss-mixins": "^4.0.2",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^2.0.0",
+    "simian-color-functions": "^1.1.0"
   }
 }
